Fixed card button spacing and minor style corrections

--- a/_cards.scss
+++ b/_cards.scss
@@ -99,10 +99,9 @@
         align-items: flex-start;
         margin-top: 1.25rem;
         margin-bottom: 2rem;
-    }
 
-    .my-projects__project-card__button-container__buttons{
-        margin-right: 1.25rem;
-        
+        .my-projects__project-card__button-container__buttons{
+            margin-right: 1.5rem;
+        }
     }
 }
