--- a/_footer.scss
+++ b/_footer.scss
@@ -1,6 +1,6 @@
 @use "./variables" as *;
 footer{
-    background-color: $footercolour;
+    background-color: black;
     height: 13.5rem;
     padding: 50px;
     width: 100vw;
