--- a/_my-projects.scss
+++ b/_my-projects.scss
@@ -9,5 +9,5 @@
 #my-projects__title{
     font-weight: 600;
     font-size: 2rem;
-    padding: 2rem 0 0 0;
+    padding: 6rem 0 2rem 0;
 }
