--- a/_variables.scss
+++ b/_variables.scss
@@ -1,1 +1,1 @@
-$footercolour: black;
+$primaryfontcolour: black;
